[project]
name = "oracle-ar-mcp"
version = "1.0.0"
description = "Oracle Fusion AR MCP Server - Streamable HTTP for Railway"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.8.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
oracle-ar-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
